# qianyuan-app

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  package.json  vitest.config.ts
.claude/: CLAUDE.md
.claude/agents/: component-builder.md  database-architect.md
.claude/commands/: edison.task-done.md
.claude/hooks/: _edison_guard.sh  commit-guard.sh  compaction-reminder.sh  enforce-worktree.sh  inject-session-context.sh  stop-continuation.sh
.cursor/commands/: edison.task-show.md
.cursor/rules/: edison.mdc
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/feature-policy/: preview.json
.github/workflows/: build-tauri.yml  build-ui-mobile-local.yml  deploy.yml  ios-unsigned.yml  nightly-dev.yml  promote-branch.yml  promote-docs.yml  promote-server.yml  promote-ui.yml  promote-website.yml  providers-contracts.yml  publish-cli-binaries.yml  publish-docker.yml  publish-hstack-binaries.yml  publish-server-runtime.yml  publish-ui-mobile-dev.yml  publish-ui-web.yml  release-npm.yml  release-verify.yml  release.yml  self-host-e2e.yml  tests-dispatch.yml  tests.yml
apps/bootstrap/: package.json  vitest.config.ts
apps/cli/: .gitignore  .npmignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  vitest.config.ts  vitest.integration.config.ts  vitest.slow.config.ts
apps/server/: AGENTS.md  README.md  package.json
apps/stack/: .mcp.json  AGENTS.md  README.md  package.json
apps/ui/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  app.config.js  appVariantConfig.cjs  babel.config.js  eas.json  fingerprint.config.js  google-services.json  (+6 more)
apps/ui/modules/happier-crypto-worker/android/src/main/cpp/: CMakeLists.txt  happier_crypto_worker.cpp
apps/ui/src-tauri/: Cargo.toml  UPDATES.md  build.rs  tauri.conf.json  tauri.preview.conf.json  tauri.publicdev.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/src/: lib.rs  pet_overlay.rs  window_chrome.rs
apps/ui/src-tauri/src/pet_overlay/: native_mouse.rs
apps/ui/src-tauri/src/system_tasks/: hsetup_path.rs  mod.rs  state.rs
apps/ui/src-tauri/tests/: window_chrome_acl_test.rs
docs/: README.md  acp-provider-feature-matrix.md  agents-catalog.md  claude-feature-matrix.md  codex-feature-matrix.md  issue-triage.md  opencode-feature-matrix.md  pi-feature-matrix.md  release-process.md  testing.md
scripts/: runWithHeartbeat.mjs
(+9450 files in other folders)
