[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.94.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }
flate2 = "1.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
libc = "0.2"
flate2 = "1.1"
tauri = { version = "2.8.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.1", features = ["NSEvent", "NSWindow"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.9"

[dev-dependencies]
tempfile = "3.20"
